@ https://take.ms/cS5Vt — make sure this (A) covers the bottom in short cases

--- a/front/assets/styles/slideout.less
+++ b/front/assets/styles/slideout.less
@@ -38,6 +38,7 @@ body {
   z-index: 0;
   width: @slideout-menu-width;
   overflow-y: auto;
+  display: none;
   -webkit-overflow-scrolling: touch;
 }
 
